--- a/scss/components/00-config/_colors.scss
+++ b/scss/components/00-config/_colors.scss
@@ -1,5 +1,5 @@
 
-$color--blue: #40699D;
+$color--blue: #0079A8;
 $color--white: #ffffff;
 $color--grey: #545454;
 $color--grey-light: #D9D9D9;
@@ -8,5 +8,7 @@ $color--black: #212121;
 
 $color--primary: $color--blue;
 $color--text: $color--black;
-$color--border: $color--grey;
+$color--border: $color--grey-light;
 $color--background: $color--grey;
+$color--background-light: $color--grey-light;
+$color--background-dark: $color--text;
