--- a/scss/components/00-config/_fonts.scss
+++ b/scss/components/00-config/_fonts.scss
@@ -1,6 +1,6 @@
 
 // GOOGLE FONTS
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital@0;1&family=Teko:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,600;1,400;1,600&family=Teko:wght@500;600&display=swap');
 
 // ICOMOON
 @font-face {
@@ -8,7 +8,7 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    src: url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff2?6tr204') format('woff2'), url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff?6tr204') format('woff');
+    src: url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff2?8tby94') format('woff2'), url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff?8tby94') format('woff');
 }
 
 $font--regular: 'Barlow Condensed', sans-serif;
