--- a/scss/components/00-config/_settings.scss
+++ b/scss/components/00-config/_settings.scss
@@ -4,7 +4,6 @@ $container-max-width: 1400px;
 $small-screen-padding: 8vw;
 $medium-screen-padding: 6.5vw;
 $large-screen-padding: 7.5vw;
-$content-width: 700px;
 $admin-bar: 39px;
 $admin-bar-open: 79px;
 
@@ -40,12 +39,13 @@ $bp--condensed-layout: 1px $width-condensed-layout;
 $bp--large-layout: $bp--tablet-landscape;
 
 // Basic layout
-$row-margin-small: 4em;
-$row-margin: 7em;
-$column-gap: 2em;
+$row-margin-small: 7em;
+$row-margin-medium: 10em;
+$row-margin: 13em;
+$column-gap: 1.7em;
 $row-gap: 2em;
 
 // Interface
 $outline-offset: 2px;
 $outline:2px dotted;
-$border:1px solid $color--border;
+$border:2px solid $color--border;
