--- a/scss/components/30-organisms/global/_footer.scss
+++ b/scss/components/30-organisms/global/_footer.scss
@@ -1,1 +1,28 @@
 
+.site-footer{
+    padding-top: 6em; padding-bottom: 4em;
+
+    .footer-top{
+        @include breakpoint($bp--phone){
+            display: block;
+        }
+    }
+
+    .logo{
+        width: 90px;
+        @include breakpoint($bp--large){
+            width: 120px;
+        }
+    }
+
+    ul{
+        @include breakpoint($bp--tablet-portrait){
+            margin-top: 0;
+        }
+    }
+
+    .copyright{
+        font-style: italic; color: #939597; margin-top: 4em;
+    }
+
+}
