--- a/scss/components/00-config/_fonts.scss
+++ b/scss/components/00-config/_fonts.scss
@@ -1,6 +1,6 @@
 
 // GOOGLE FONTS
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,600;1,400;1,600&family=Teko:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,600;1,400;1,600&family=Teko:wght@300;500;600&display=swap');
 
 // ICOMOON
 @font-face {
