--- a/scss/components/05-base/_utility.scss
+++ b/scss/components/05-base/_utility.scss
@@ -48,6 +48,13 @@
         }
     }
 }
+.hide{
+    &-phone{
+        @include breakpoint($bp--phone){
+            display: none !important;
+        }
+    }
+}
 
 
 // Flex / Grid
