--- a/scss/components/30-organisms/global/_header.scss
+++ b/scss/components/30-organisms/global/_header.scss
@@ -38,8 +38,11 @@
     }
     h4{
         @include maxWidth(30ch);
-        @include breakpoint($bp--large-layout){
+        @include breakpoint($bp--tablet-portrait){
             max-width: none;
+        }
+        span{
+            font-weight: 300; letter-spacing: -0.1em; display: inline-block; margin: 0 0.3em 0 0.15em;
         }
     }
 
