--- a/scss/components/00-config/_fonts.scss
+++ b/scss/components/00-config/_fonts.scss
@@ -8,7 +8,7 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-    src: url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff2?vi5nys') format('woff2'), url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff?vi5nys') format('woff');
+    src: url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff2?qfl6sp') format('woff2'), url('https://d1azc1qln24ryf.cloudfront.net/42560/Ethic/icomoon.woff?qfl6sp') format('woff');
 }
 
 $font--regular: 'Barlow Condensed', sans-serif;
